spring boot update 3.4.5 change frontend to react update project modules update entity User add entity UserLogins update database schema update security config jwt